--- a/pymanopt/solvers/plots.ipynb
+++ b/pymanopt/solvers/plots.ipynb
@@ -24,18 +24,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "X = T.matrix()\n",
-    "\n",
-    "times = []\n",
+    "np.random.seed(1)\n",
+    "X = T.matrix()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "# fix p\n",
-    "p = 5\n",
-    "\n",
-    "for n in np.logspace(1, 4, 40):\n",
-    "    n = int(n)\n",
+    "p = 3\n",
+    "def dependence_n(n):\n",
     "    A = np.random.randn(n, n)\n",
     "    A = 0.5 * (A + A.T)\n",
     "    cost = T.dot(X.T, T.dot(A, X)).trace()\n",
@@ -47,39 +56,32 @@
     "    # pick a solver\n",
     "    solver = ConjugateGradient(maxiter=1000, mingradnorm=1e-6)\n",
     "    # solve\n",
+    "    t = time.time()\n",
     "    Xopt = solver.solve(problem)\n",
-    "    t = time.time() - solver._time\n",
-    "    times.append(t)"
+    "    t = time.time() - t\n",
+    "    return t"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<matplotlib.text.Text at 0x106fc4250>"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYsAAAEjCAYAAADDry0IAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3XmYFNW9//H3MMggRDZBZCeO4pIYgSjqjcDkRgYSlOWa\nuCQaNIZcYwS8MYvAeGdiXKMxueDV3MQbQ/KL5hpNFJ0EhijDYIwRFFxADAygIjAKYsRlBgfq98e3\nmqnpqe6uXqo3Pq/n6aerTlWfOj0F9e1zTp1TICIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiJS\noD6e4ucGAN0yWRCRiE65LoAUva3A52JsewkYl6VyZPNYsRwPrAXeBa6Ksc8xwBkp5v8W8L0MlEFE\npJ25wJ+i0jbGSDs/xWNsAf41xc+mamsOjhnE/wI/TrDPrT5pI4Hbo9I+BlwPzASuAUrc9NOAr6ZZ\nhlxpBFqAJuJ/BxHJsn8B3qHtQjMAu7hvp63WOQA4ABydZN6d3fdcBIstxK7N5NJfgMvjbD8FmBWV\n9m3gD8C9Uem/BIa5y+s8ywC/TqMM8XROvEtaZgJDs3AcEUlSF+B9YJS7fj52EaoHRnvS/uEun+hu\n24M165wbld9WrBnkBeBDoJT2weJEYDNwgWf/f/UsXwM8jwWw3wFlnrxHA2uw5pMHgP8DfujznX4D\n7Ac+APYC34lxrO+45dyL/druD/wZ+CewDOjlyXMg8BDwplv+6Au6V6y/0RNAK/Z3eRc41uez84FP\n+KTPoH2wOAZY4lkfFLX/j2PkH6sM8c7rVtqf0zCbrmeEmLeIpOkJ4Gp3+U7gMuCGqLR7sF97m4Br\n3eXPYhecEZ68tgLPYRevyIU+EixGA68CX/Ds7w0kW4GnsRpMb2A98O/uti7uZ2dhAWg61lxxfYzv\n5FebiT7WU0A/LBA0ueU+xS3348B/uvt2Ap4Fqtzv/XGsuaTS57iH4f83Os7dvhz4WowyAzxMWy3P\n61LaB4uvY8H0EuxvcmnU/l+lLSBHiy5DojJvpeM5TcYxwM1xXlM9+94JfAML5FNSOJaIhKgaa+YA\n6/gsByZ60p7HLkpjgR1Rn73P/XzEFjpeuLYAPwBep2MHs/cCvgX4smfbrcDd7vI4YFvUZ1eSerDY\nAlzk2fYg8N+e9auAP7rLp2OBymsuVgOLluhvtJz4TUB1MdKjaxbzsRpAxEraLu5gNYNrYuQVXYZE\nZfY7p16nYMHnVuzCP5PU+xume5bX0r52Jzmmu6GkATgL+zXfD/vV/DesP6M31izSgP0Cfz3qs6/S\nsQkkep8SrIbwVzefeHZ6lj/EOnFxj/2Gz3H8foUH1RR1LO96s+fYw9zj7/G85gJH+eQZ62800LPu\nxClTaYz06O/5LvCiZ/012td0PsRqY7F4yxCkzNHbvfoDrwDDgUewQFMVZ/94HvEs7wEqUsxHQqCO\nJHka6In9Ivyrm/Yu1sn9Dff9VazjcQh24YpcbIYBG6Lyi74YOliwuBa4A+uwTdYOOgaloVjziZ94\nF+RYYgWe17Ff1yNibPfaTrC/USytMdKjv886rEYQcYD2P/x6Am8HPGaQMsf7e9ZhNcdH3fVRwC7P\n9mOwf1uxPI0FiYuxpqfIXXfdif33kBxQzUI+BFZjF3HvL/8n3bQV7vrfsU7j72Ht3BXAOVjbeSJ7\ngUlYc9LNKZTxb1in9VXYD5yp2C2isTRhzWmZ8AxW/u8Bh2O//j8JnOqz79Mk/hvFqw3tpK1G4xX9\nmb9iwTKinPa3Ow8gdiCNzi9ImRM5m7Z/JzNof5vvZqwmFusVqU1sBX7mLnfDarlPJFEGCZmChYD9\nR++HBYiIlUBf2gLIPqwt/PPY4K87sb6MfxDMP4EJ7ud/EGB/h7ZftPuAf8Pa2vcAXwEec9P93Iw1\nhewheE3GiVqOrO/HLp4jsQvfW8DPgR4+eXxE4r9RvF/pK4AxUWlXYX0CFVg/Qg+sc78G67O5Aetv\nafR8ZiRttUQ/3jIEKXM8PYE+WH/QTOxHxR/ifsLfk1iQuxq4EbgQC2JyCOmFdSC+jN3hcjr2j2sZ\n9g+yjvYdWXOxQWAb8L/jRATsolRst1r2wi7+6eiKNfdly3T8BxKKJG0RbbfqdcZ+ifyItmkJvg/c\n4i6fhN0FcRjWYbYJ1X7EjMNuq+2MBYn3sc7VYnM1VqNL1aXYlB7ZcAJWA70X/5qWSGA9sap7tA20\n/Uc/mrbOtLlY8IhYQurz5EhxmYm16e/FflB8PrfFCU0J8TuE4xlC+3ELIgVjJNZccC82sOcX2F0O\nezz7lHjWF2Lt0RH3AOeFX0wREYkn7CaeztjI3bvc9/exWyi9vJ2JflK5DVJERDIo7HEW29zXKnf9\nQaypaSfW/LQTuwPiTXf7G1hVOmIwUYOxysvLncZG740fIiISQCP+c4YFEnbNYic2qCkyoOlsbEDR\no7TdyTIDmxMHYDF2y1wXbA6e47D73A9qbGzEcZycv6qrq3OeVzKfC7JvvH1S2eaXnsm/Wz6cu2I9\nf/l67grx/KV77uJtTyadNMcexZpeIJOew+6IugoLAtdgk7hdi90L3xuYg02x8BZ2W+092DxBs+g4\nuKimpqYmC8VObPjw4TnPK5nPBdk33j6pbItOr6+vp6KiImE5wpbJc5dOfvl8/vL13EHhnb90z128\n7YnSa2sbmDXrFzQ2roRgY5x8pTO3Tq44bpSUAlRTU0O+BHtJjs5d4amtbWDOnKU0Nt6Ie7lP+Zqv\nMQySVfnyy1SSp3NXeBYsqHMDRfoULCSrdMEpXDp3haelJXP3MClYiIgUqbKyzE3cq2AhIlKkZs+u\npLx8fkby0vMsRESK1OTJ9nDKCy+8jvfeSy8v3Q0lIlLkBg2C7dvTuxtKwUJEpIg5Dhx+OLS06NZZ\nERGJ4f33oVMGrvQKFiIiRWz3buibzhNSXAoWIiJFbNcuOPLI9PNRsBARKWKqWYiISEK7dilYiIhI\nArt3qxlKREQSUM1CREQSUge3iIgkpA5uERFJSDULERFJSDULERFJSDULERFJSDULERGJ64MPbNbZ\nbt3Sz0vBQkSkSEWaoEoy8DAKBQsRkSKVqSYoULAQESlamercBgULEZGipZqFiIgkpJqFiIgkpJqF\niIgkVGg1i63AC8Aa4Bk3rQ+wDPgHUAf08uw/F9gIbAAqs1A+EZGiVGg1CweoAEYBY9y0a7FgMQJ4\n3F0HOAm4wH2fBNyVpTKKiBSdTD3LArJ3IY4eEjIFWOQuLwKmuctTgfuBj7AaySbaAoyIiCSh0Jqh\nHOAvwGpgppvWH2hyl5vcdYCBwDbPZ7cBg7JQRhGRopPJZqjOmckmrs8AO4B+WNPThqjtjvuKJd42\nERGJIZM1i2wEix3u+1vAH7FmpSbgaGAnMAB4093nDWCI57OD3bR2ampqDi5XVFRQUVGR4SKLiBS2\npUvraW6u5/bbMzM3VAayiKsbUArsBbpjdz79ADgb2A3cinVu93LfTwLuwwLKIKz56lja1y4cx1Fl\nQ0Qknm3bYMwY2L7d1kssYqR8zQ+7ZtEfq01EjvVbLGCsBh4ALsc6ss9391nvpq8HWoErUTOUiEjS\nMtlfAeEHiy3ASJ/0t7HahZ+b3JeIiKQok/0VoDEMIiJFKdM1CwULEZEilMkBeaBgISJSlNQMJSIi\nCakZSkREElLNQkREElLNQkREElLNQkREElLNQkREElLNQkRE4mppgeZm6NEjc3kqWIiIFJlIE1Qm\nZpuNULAQESkymW6CAgULEZGik+nObVCwEBEpOqpZiIhIQqpZiIhIQqpZiIhIQqpZiIhIQpl+lgUo\nWIiIFB01Q4mISEJqhhIRkYRUsxARkYTCqFlkcOaQrHEcx8l1GURE8tK+fdC9u71754YqsZWUr/mq\nWYiIFJG334Y+fTI7iSAoWIiIFJUw+itAwUJEpKiE0V8BChYiIkUljAF5oGAhIlJU1AwlIiIJFXIz\nVCmwBnjUXe8DLAP+AdQBvTz7zgU2AhuAyiyUTUSkqBRyzWIOsB6IDI64FgsWI4DH3XWAk4AL3PdJ\nwF1ZKp+ISNHIl5pFH+BTSew/GPgCcA9tg0GmAIvc5UXANHd5KnA/8BGwFdgEjEmyfCIih7Rc1ixW\nAD2wQPEsduH/ScD8fwJ8FzjgSesPNLnLTe46wEBgm2e/bcCggMcRERHCq1l0DrBPT+Bd4OvAr4Fq\n4MUAnzsHeBPrr6iIsY9DW/NUrO0d1NTUHFyuqKigoiJW9iIih5ZIzaK+vp76+vqM5RtkQPiLWGfz\nIqAKeAZ4gcTNUTcBlwCtQFesdvIH4DQseOwEBgDLgRNo67u4xX1fggWmv0flq7mhRERi6NULNm+2\nKT+8sjE31PXAUqARCxTl2B1LicwDhgAfBy4EnsCCx2JghrvPDOBhd3mxu18X9zPHuccTEZEAPvoI\n3nvPAkamBWmG+r37imgEzkvhWJHqwC3AA8DlWEf2+W76ejd9PVYbuZL4TVQiIuLx9tvQuzd0CuE+\n0nhVkoWeZcezb+QCPjvzxQlEzVAiIj7Wr4fzzoOXX+64LcxmqGfdVxkwGhtEtxEYhTUViYhIHgnr\ntlmI3wz1K/f9m8BZ2PgHgLuBJ8MpjoiIpCqs22YhWAd3L+xOpogjaD9Fh4iI5IFc1SwibgGeA+rd\n9fFATTjFERGRVIVZswgSLO7FxjycjnVufx8bIyEiInlk1y446qhw8g56g1Un4C3gHWwCwHHhFEdE\nRFIV1oOPIFjN4lZsNtj1wH5PekMoJRIRkZTkuhlqOnA80BJOEUREJBPC7OAO0gzViMZViIjkvVzX\nLD4E1mIPKorULhxyN4JbRER85PrW2cXuKzLHRgmas0lEJK+0tsK779rcUGEIEix+hU35McJd30Db\naG4REckDe/ZAz55QWhpO/kGCRQX2LItX3fWh2NTiK8IpkoiIJCvM/goIFizuwB5+9Iq7PgL4HTa5\noIiI5IEw+ysg2N1QnWkLFGCzzwYJMiIikiVhDsiDYBf9Z4F7gP+HdW5/BVgdXpFERCRZ+dAM9U3g\nW7TdKrsSuCu0EomISNLCboYKEixKgZ8CP/asl4VWIhERSVrYNYsgfRZPAId71rsBfwmnOCIikop8\n6OAuA97zrO/FAoaIiOSJfKhZvA982rN+KjYFiIiI5Il86LO4Gvg9sN1dH4BNWS4iInkiH26dXYVN\nUX48duuspvsQEckzYTdDlQTYpzvwbWyaj5nAcVjgeCy8YsXlOI7mMRQRidi/H8rKoLkZOseoApSU\nlECwa76vIH0W9wL7gH9x17cDN6Z6QBERyax33oEePWIHikwIEizKsUer7nPX3w+vOCIikqywO7ch\nWLBoof04i3L0iFURkbwRdn8FBOvgrgGWAIOB+4DPAJeGVyQREUlGvtQs6oDzgMuwYPFpYHmAz3UF\n/o49knU9cLOb3gdYhs1eWwf08nxmLrARu+OqMsAxREQOedmoWQQJFmcBzdjdT72BecCwAJ9rBj4L\njAQ+5S6fBVyLBYsR2HO9r3X3Pwkbv3ESMAmbrDBI+UREDmn5UrO4G/gAOAW7hbYR+HXA/D9w37tg\nExDuAaZgT97DfZ/mLk8F7sfGcGwFNgFjAh5HROSQFfaAPAgWLFqBA9hF/b/d1xFJ5L8WaMKartYB\n/d113Pf+7vJAYJvns9uAQQGPIyJyyMqXDu69WNPTxcBYrIZwWMD8D2DNUD2BpVhTlJfjvmLx3VZT\nU3NwuaKigoqKioDFEREpPn7NUPX19dTX12fsGEFG8w0ALsKm/ViJjeSuIHhTVMR12ASEX3c/v9PN\nezlwAm19F7e470uAaqyT3EsjuEVEPMaOhRtvhHHjYu+TjRHcO4A7sEAB8BrBAkVf2u50OhyYAKwB\nFgMz3PQZwMPu8mLgQqx/4+PYtCLPBDiOiMghLRsd3CEODmcA1oHdyX39Brv7aQ3wAHA51pF9vrv/\nejd9PdZPciXxm6hERITs9FmkXCXJITVDiYgAtbUNLFhQR11dZyZMaGXOnEomT/Zvi0q3GSrMmoWI\niISktraBOXOW0tho87ouWwabN88HiBkw0hF0UN4ybGT1Fve1OeMlERGRwBYsqDsYKCIaG29k4cJl\noRwvSM3if7Gn5T0H7A+lFCIikpSWFv/Ld3NzaSjHCxIs3gH+HMrRRUQkJWVlrb7pXbuG85s+SDPU\ncuA24ExgtOclIiI5Mnt2JeXl89ullZfPY9asCaEcL0jPeD3+t7BGj8bOFt0NJSICLF7cwPTpyzjj\njFKOOGI/s2ZNCO1uKN06KyJSoF56CaZPh40bE+8b5q2zl2AD6a6hfc2ixF2/I9WDiohI+latgtNO\ny86x4gWLbu77EWgktYhI3slmsFAzlIhIgRozBu64A846K/G+6rMQETkE7dsHvXrBW29B9+6J98/G\nrLMiIpJnXngBysuDBYpMULAQESlA2eyvgGDB4mhsyo8l7vpJ2PTiIiKSI/kYLH4F1GHPyAabUPA/\nwiqQiIgktnp1/gWLvsD/0TaJ4EfYw4lERCQH3n8fNm2Ck0/O3jGDBIv3AO8D+84A/hlOcUREJJE1\na+ATn4CysuwdM8iss9cAjwLHAE8B/YAvhlkoERGJLdv9FRAsWDwLjAdGYPfovoI1RYmISA6sXg1n\nn53dYwYZoNEZmAwMpy245HJuKA3KE5FD2ogR8NBDyfVZZOMZ3I8CHwIvAgdSPZCIiKTvnXdg+3Y4\n8cTsHjdIsBgEfCrsgoiISGKrV8OoUdA5yNU7g4LcDVUHTAy7ICIiklguOrchWLB4Cvgj0AzsdV/v\nhlkoERHxl+3BeBFBgsUd2NiKbtizLY4AeoRZKBER8bdqFZx6avaPGyRYvAasQ53bIiI51dQEe/fC\nscdm/9hBuki2AMuBPwP73DQ9VlVEJMsitYqSHDyJKGiw2AJ0cV+RZ3CLiEgW5apzG4IFi5o08h8C\n/Bo4CgswPwcWAH2wyQmHAVuB84F33M/MBb6GTVw4G7sbS0TkkLd6NXz967k5drzKzJ3AVdigvGgO\nMCVA/ke7r7XAx7CpQ6YBlwG7gB8B3wd6A9diz8q4DzgNG9/xF2yaEW9/iUZwi8ghx3Ggf3949lkY\nMiT5z4c5gnsGFix+7LMt6NV6p/sCm732ZSwITMHmmwJYBNRjwWIqcD8299RWYBMwBng64PFERIrS\na69Bp04weHBujh8vWGxy3+szdKzhwCjg70B/oMlNb3LXwR6w5A0M27DgIiJSVGprG1iwoI6Wls6U\nlbUye3YlkyePi7l/pL8iF53bED9Y9AO+jX+1Jdm7oT4GPATMwQb1RecVr6aiNicRKSq1tQ3MmbOU\nxsYbD6Y1Ns4HiBkwctm5DfGDRSk2AC9dh2GB4jfAw25aE9aXsRMYALzppr+BdYpHDHbT2qmpqTm4\nXFFRQUVFRQaKKSKSHQsW1LULFACNjTeycOF1MYPF6tXwne8EP0Z9fT319fVplLK9eBWaNVizUbr5\nLwJ20/653T9y027F+ip60b6DewxtHdzH0r52oQ5uESloFRU1rFhR0yF9/Pga6us7ph84AH36wMaN\n0K9fasfMxhTl6fgMcDHwAhZ8wG6NvQV4ALictltnAda76eux53xfiZqhRKTIlJW1+qZ37brfN33j\nRujVK/VAkQnxgkUmnsP0JLGnFImV/03uS0SkKM2eXcmmTfPZvLmtKapz53mMGDHJd/9c91dA/GCx\nO2ulEBE5hEyePI7nn4fbbruOU04ppWvX/UyfPomamnFMmADnntt+/1zNNOuV5cdniIgIwL5947ji\ninHcfHNb2siRcM45sHgxnHlmW/qqVXDDDdkvo1eQWWdFRCTDVqyAcVE3Pp1+OixaBNOnw4YNltba\nCs8/D6NHZ7+MXjka3pEW3Q0lIgWtpQWOPNKepd3D5+lAv/oV1NTA9dc38LOf1bF2bWfGjk08cC+e\nfL8bSkREoqxeDSec4B8oAC69FJYvb2DmzKXs22ed4HV1iQfuhUnNUCIiWdbQ0LEJKtrOnXUHA0WE\nDdxbFmLJYlOwEBHJMr/+imgtLf4NP83NpSGUKDEFCxGRLGpthb/9Dc46K/5+yQ7cC5uChYhIFq1d\nC0OHQt++8febPbuS8vL57dLKy+cxa9aEEEsXmzq4RUSyKEh/BbR1Yi9ceB3NzTZwb9asSTnp3Abd\nOisiklVTp8KXvwwXXJDd46Z766yChYhIlhw4YM1PL70EAwdm99jpBgv1WYiIZMm6dTYYL9uBIhMU\nLEREsqShAcaPz3UpUqNgISKSJUHGV+Qr9VmIiGSB48CAAfD00zB8ePaPrz4LEZECsHEjdOkCw4bl\nuiSpUbAQEcmCyPiKkkJsz0HBQkQkK1asKNzObVCwEBHJiqAjt/OVgoWISMhefRWam2HEiFyXJHUK\nFiIiISv0/gpQsBARCV2hN0GBgoWISOgKvXMbFCxEREK1Ywfs2gWf/GSuS5IeBQsRkRCtXGlPxetU\n4FfbAi++iEh+K4b+ClCwEBEJVSFPHugVdrD4JdAEvOhJ6wMsA/4B1AG9PNvmAhuBDUBlyGUTEQnV\n7t02xmL06FyXJH1hB4t7gUlRaddiwWIE8Li7DnAScIH7Pgm4KwvlExEJRW1tA2efXUVpaQ2TJ1dR\nW9uQ6yKlpXPI+a8EhkelTQEiN5EtAuqxgDEVuB/4CNgKbALGAE+HXEYRkYyqrW1gzpylNDbeCEBd\nHTQ2zgdg8uTCbJPKxS/3/ljTFO57f3d5ILDNs982YFAWyyUikhELFtQdDBQRjY03snDhshyVKH25\nbuZx3Fe87SIiBaWlxb/Rprm5NMslyZywm6H8NAFHAzuBAcCbbvobwBDPfoPdtA5qamoOLldUVFBR\nURFCMUVEUtPS0uqb3rXr/qyVob6+nvr6+ozll41prYYDjwInu+s/AnYDt2J9Fb3c95OA+7B+ikHA\nX4Bj6Vi70GNVRSRv7dkDJ5zQQEnJUpqa2pqiysvn8V//NSlnfRbpPlY17GBxP9aZ3RerUfwn8Ajw\nADAU68g+H3jH3X8e8DWgFZgDLPXJU8FCRPKS48C0afaM7crKBhYuXEZzcyldu+5n1qwJOe3czvdg\nEQYFCxHJS7fdBg89ZKO2u3TJdWnaU7AQEckDK1fCl74EzzwDQ4fmujQdpRsscn03lIhIwWtqgosu\ngnvvzc9AkQmqWYiIpGH/fqishDPPhBtuyHVpYlMzlIhIltXWNrBgQR0tLZ15/fVWunevZM2acZTm\n8TCKdINFLsZZiIgUrOipPACGD5/PkiWFO5VHEOqzEBFJgt9UHlu3FvZUHkEoWIiIJKEYp/IIQsFC\nRCQJZWW5n8ojFxQsRESScO65lXTqNL9dWnn5PGbNmpCjEmWH7oYSEQmopQVOOw0+97kGXn45f6by\nCEK3zoqIZMl3vwubN8ODD0JJgV09deusiEgW1NfDfffB888XXqDIBPVZiIgk8M9/wqWXwi9+AX37\n5ro0uVGI8VHNUCKSVTNmQLducPfduS5J6tQMJSISogcfhKeegrVrc12S3FLNQkQkhh07YORIWLwY\nTj8916VJj2oWIiIZFJkksLm5M+vWtTJhQiWnn57ft8Vmg4KFiIjLb5LAVavmU1tb3JMEBqG7oURE\nXH6TBDY2Fv8kgUEoWIiIuHbtOjQnCQxCwUJEDnnvvAPf+ha89NKhOUlgEOqzEJGi4X2CXVlZK7Nn\nV3boa4je5+STK/ntb8cxdSosWlRJVdX8dk1RNkngpGx/lbyjYCEiRcGvc7qx0WaHjQQMv33q6+dz\n001wzTXjgHEccQQsXHidZ5LASYd85zZonIWIFImJE6uoq7uhQ/qwYdcxZcoPaW2FxYureOONjvtM\nnHgdS5b8MBvFzJl0x1moz0JEikJzs39DSWlpKeXl8MlPQrdu6sBOlZqhRKTg7d4Nr7zi3zl93HH7\nmTPHlh95pJWNGzvuow7sxFSzEJGCtmyZTclxxhmVHHNM/CfYzZ5dSXn5ofeUu0xQn4WIFAzvnUyH\nHdZKt26VPPfcOO69F84+27YvXBj/CXZB9ilGxfikvEnAT4FS4B7g1qjtChYiBSjRba1BtkffydS9\n+3zuuWciF15Y/Bf7dKUbLPJNKbAJGA4cBqwFTozax5HCtXz58lwXQaI89tgKp7JyvjN+fLVTWTnf\neeyxFb7bTzllhu/2oHmUl89zwDn4Ki+fd3C/WNsffXSFs3u346xb5zinnjq/3fbIa+LEqvD+OEUE\nSOtXdr51cI/BgsVWd/13wFTgZe9OEydWBRpsk+wvl2zlcSiX9ZVXnuT44886ZL5vvpc10diE9ttr\ngJpAYxei94k159L8+dexbds4br/df/uUKdfRs+c4jj4aduzQnUzS5ovALzzrFwMLo/bp8KvEcVL/\n5ZJ6HstTysN/n+UplXXgwK8k8X2XJ12O9vssj3mcWOWI1CLaH6c6C+cmUR7+3yXV4wwc+JUU80im\nHMmfvyD/Xisr57crR+R1yikXO6+/7jhjx3p/zVcfXB4zpsp5/HHHWbLEcUaN8v/FP2BAlTNxouOM\nHu04XbpU++7Tt2+1M3Om4wwZ4r997NjqqLI6Hcqbbs0i1dpu0M8F2S/RPrG2J5NOmjWLfHMeAYMF\nOM6wYVXO1Vc7ztVXO87Qof7/YIcNq3LmzEm8PdE+HY9RnXQesfexvIYOrXKuuspxhgzxz2Po0Cpn\n1izHmTUrkkfH/2DDhlU5s2fHP8bs2U7CfSLHaStLtW9ZbHvHcgwZUuWcdlq1c+WV0d+nut0+3/xm\n7O87ZEiVc8UVjnPFFY4zeLD/PoMGVTmXXeY4Awf6bx840LZ/7WuOM2iQ/3cZOLDKmTHDcS65xHEG\nDPDPp3//Kuf88x2nf3+/7dXOUUdVOdOnO860aY7Tr59/Hv36VTnTpjnOUUf5l6NfvyrnnHMc5wtf\ncJwjj/Q/N0ceWeVMmOA4EyY4Tp8+/vt0717lHHus45SV+f/docopLXWckpJIesfzV1Iy3hk40HHK\nyqp98+jRo9r57Gcdp7LScXr39r/QH398tfOnPznOqlXRQafjhb4tEPhvdxxv8Gs7Xnn5XN9msWRU\nV1eH+rlHEkQsAAAEVElEQVQg+yXaJ9b2ZNLt2pm6fOvsOAOr60YmYpkLHKBdJ3e5A43ZLpeISKFr\nBI7NdSEypTP2hYYDXfDv4BYREeHzwCtYR/fcHJdFREREREREREREREQkqI9j04L8PtcFkZRMBX6O\nDcDUbG6F5QTgbuAB4PIcl0VS0x1YBUzOdUGyScGisPXCgr4Unk5YwJDC8wPgOwQIFvk6RfkvgSbg\nxaj0ScAGYCPw/WwXSgJL5fxVAXeGXzRJINlzdy5Qi9UMJfeSOX8TgPXAW1krXQjGAqNo/4UTTTKo\nmkX+SOb8lWCDLj+X3SJKDKn83wN4JBuFk4SSOX83AD8BlgIPk2CQdr5NJBixEvtiXrEmGWwCbgJG\nYhEzekpzyb5kzt/ZWKDogY0u/Z+slFBiSebcHQX8G9AVWJ6d4kkCyZy/Knd9Bla7iDsdSL4GCz+D\ngNc969uA04G3gStyUiJJRqzzN4uO839Jfol17la4L8lvsc5fxKIgmeRrn4WftCbBkpzT+StcOneF\nLSPnr5CCxRvAEM/6ECxCSmHQ+StcOneFrejP33Dad9JoksHCMhydv0I1HJ27QjacQ+j83Q9sB1qw\ntrbL3HRNMlgYdP4Kl85dYdP5ExEREREREREREREREREREREREREREREREREREREREZEcOAD8xrPe\nGZuv/9E4n+kJfDNBvn9Ns1yZykNERDJgL/Ac9lAesHlx1gCL43xmOB0fRRlRQoKniIkUu0Kaolwk\nGX+i7SH0F2ETrEUu+A8Dq4GXgJlu2i1AORZUbgWGYROvLQJewKZ1fs/d9zTgeaAM6O7mc1LU8btj\nz6ZeiwWhL7npkTyucI+1BtgCPOGmXwz83U3/Gfo/KiISmr3Aydhz2cuwC+942pqhervvh2MX8t5Y\ncPDWLIYD+7FHUnrzjfghcBtwJ/Y432jnAT/3rB/hkwdYE1kDFthOxGo/pe62u4BLfPIeC/wUmO6+\nqnz2EcmoQnqsqkgyXsQu+Bdhv/C95gDT3OXBwHHAmz55vAo8EyP/67HayYfYo2GjvQDcjtVYHgOe\njJHPAuBxt4xXAZ928wULZjt9PhN58tk2YJXnu4iERsFCitli7II9Hujnpo0HPgecATQDy2nr24j2\nfpy8+2JNTaXYRf2DqO0bgVFYjeEGLCD8MGqfS7HmrSs9aYuAeXGOCxZ4vo8Fip5Aa4L9RdKm9lAp\nZr8EaoB1nrSewB4sUJyABQ2w5qEjCO5/sOaf+7A+jmgD3GP8FgtYo6K2fxq4hvbNTI8DX6QtsPUB\nhvrkfbibN8AXgGXAmUmUXSRpqllIMYo007yB9SlE0hxgCda5vB7rwP6bu303dlvri1jn+F10fNB9\nZP2r2JPIfof94HoKqADqPfuejPVpHAA+co/pzeMqrK9kubu+CvgGFoDq3Hw/wmodr0WV4xPACnd5\nL9Yxr1tyRURERERERERERERERERERERERERERERERERERPLB/wdlkW3q2RXV5QAAAABJRU5ErkJg\ngg==\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x106951a90>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "plt.plot(np.logspace(1, 4, 40), times[:40], '-o')\n",
+    "times_n = []\n",
+    "for n in np.logspace(1, 4, 40):\n",
+    "    times_n.append(dependence_n(int(n)))  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(np.logspace(1, 4, 40), times_n, '-o')\n",
     "plt.xscale('log')\n",
     "plt.xlabel(r'Matrix size $n$')\n",
     "plt.ylabel('Time in seconds')\n",
@@ -94,37 +96,49 @@
    },
    "outputs": [],
    "source": [
+    "#fix n and matrix A\n",
     "n = 1000\n",
     "\n",
     "A = np.random.randn(n, n)\n",
     "A = 0.5 * (A + A.T)\n",
     "cost = T.dot(X.T, T.dot(A, X)).trace()\n",
     "\n",
-    "times_p = []\n",
-    "for p in np.linspace(3, 500, 20):\n",
-    "    p = int(p)\n",
-    "    \n",
-    "    # specify the manifold\n",
+    "def dependence_p (p):\n",
     "    St = Stiefel(n, p)\n",
     "    # define the problem\n",
     "    problem = Problem(manifold=St, cost=cost, arg=X, verbosity=0)\n",
     "    # pick a solver\n",
     "    solver = ConjugateGradient(maxiter=1000, mingradnorm=1e-6)\n",
     "    # solve\n",
+    "    t = time.time()\n",
     "    Xopt = solver.solve(problem)\n",
-    "    t = time.time() - solver._time\n",
-    "    times_p.append(t)"
+    "    t = time.time() - t\n",
+    "    return t"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "times_p = []\n",
+    "for p in np.linspace(3, 200, 20):\n",
+    "    times_p.append(dependence_p(int(p)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "plt.plot(np.linspace(3, 500, 20), times_p, '-o')\n",
+    "plt.plot(np.linspace(3, 200, 20), times_p, '-o')\n",
     "plt.xlabel(r'Second dimension of $X$, $p$')\n",
     "plt.ylabel('Time in seconds')\n",
     "plt.title(r'Working time of $(16)$ for $n=1000$')"
@@ -136,37 +150,6 @@
    "source": [
     "---"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "true_val = sum(sorted(np.linalg.eig(A)[0])[:p])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(solver._cost, '-v')\n",
-    "plt.plot(solver._gradnorm, '-*')\n",
-    "plt.hlines(y=true_val, xmin=0, xmax=solver.iters + 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -185,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
